[package]
name = "tracing-rerun"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A tracing layer to send logs to rerun"
homepage = "https://github.com/therishidesai/tracing-rerun"
repository = "https://github.com/therishidesai/tracing-rerun"
readme = "README.md"

[dependencies]
rerun = "0.25.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
anyhow = "1.0.100"
